--- a/config.toml
+++ b/config.toml
@@ -1,9 +1,49 @@
 baseurl = "http://blog.munge.net"
 languageCode = "en-us"
 title = "blog munge net"
-theme = "purehugo"
+theme = "blackburn"
+
+[author]
+name = "Aaron M"
+email = "aaron@munge.net"
+
+[indexes]
+tag = "tags"
+topic = "topics"
 
 [params]
-Description = "five out of eight computers on the scale of computers"
+subtitle = "five out of eight computers on the scale of computers"
+highlightjs = "tomorrow-night-eighties"
+googleAnalytics = "UA-24268674-1"
+
+[social]
 twitter = "AaronM"
 github = "aaroncm"
+instagram = "AaronM"
+
+[menu]
+  # Shown in the side menu.
+  [[menu.main]]
+    name = "Home"
+    pre = "<i class='fa fa-home fa-fw'></i>"
+    weight = 0
+    identifier = "home"
+    url = "/"
+  [[menu.main]]
+    name = "Posts"
+    pre = "<i class='fa fa-list fa-fw'></i>"
+    weight = 1
+    identifier = "post"
+    url = "/post/"
+  [[menu.main]]
+    name = "Tags"
+    pre = "<i class='fa fa-tag fa-fw'></i>"
+    weight = 1
+    identifier = "tags"
+    url = "/tags/"
+  [[menu.main]]
+    name = "About"
+    pre = "<i class='fa fa-user fa-fw'></i>"
+    weight = 2
+    identifier = "about"
+    url = "/about/"
